# ShipHappens

./: .gitignore
backend/: .env.example  alembic.ini  main.py  pyproject.toml  pyrightconfig.json
backend/ai/: README.md  __init__.py  client.py  spike.py
backend/ai/samples/source/: .gitkeep
backend/alembic/: env.py
backend/alembic/versions/: e221124fd6cd_baseline_schema.py
backend/app/: config.py  database.py  dev.py  main.py  test_runner.py
backend/app/models/: __init__.py  api_usage_log.py  generated_question.py  generation_request.py  paper.py  question.py  question_embedding.py  session.py  source_file.py  style_profile.py  user.py
backend/app/routers/: generation.py  papers.py  questions.py  sessions.py  sourcefiles.py  style.py
backend/app/schemas/: __init__.py  generated_paper.py  generation_request.py  paper.py  question.py  session.py  source_file.py  style_profile.py  teacher.py
backend/app/services/: generation.py  papers.py  questions.py  sessions.py  sourcefiles.py  style.py
backend/app/tests/: conftest.py  test_api.py  test_papers.py  test_questions.py  test_sessions.py  test_sourcefiles.py  test_style.py
backend/data/: PLAN.md  backlog.html  build.html
backend/scripts/: init_db.py  test_db.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/generate/: page.tsx
frontend/components/: StepIndicator.tsx
frontend/components/layout/: DashboardLayout.tsx  Sidebar.tsx  Topbar.tsx
frontend/components/steps/: BlueprintStep.tsx  EditableStep.tsx  ExportStep.tsx  UploadStep.tsx
