[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=2.3.0",
    "jinja2>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "sqlmodel>=0.0.38",
    "supabase>=2.0.0",
    "uvicorn[standard]>=0.47.0",
]
