[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "google-genai>=2.3.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "sqlmodel>=0.0.38",
    "supabase>=2.30.0",
    "uvicorn[standard]>=0.47.0",
]

[project.scripts]
dev = "app.dev:main"
test = "app.test_runner:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]
